# accumulator

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum
accumulator/: Cargo.toml  README.md
accumulator/src/: batch_utils.rs  error.rs  positive.rs  proofs.rs  setup.rs  universal.rs  witness.rs
internal/: hash.go  point.go
pkg/accumulator/: accumulator.go  accumulator_test.go  key.go  key_test.go  lib.go  lib_test.go  proof.go  proof_test.go  witness.go  witness_test.go
pkg/core/: commit.go  commit_test.go  hash.go  hash_test.go  mod.go  mod_test.go  primes.go
pkg/core/curves/: bls12381_curve.go  bls12381_curve_test.go  curve.go
pkg/core/curves/native/: field.go
pkg/core/curves/native/bls12381/: bls12381.go  fp.go  fp_test.go  fq.go  fq_test.go  g1.go  g1_test.go  g2.go  g2_test.go  gt.go  pairings_test.go
schnorr_pok/: Cargo.toml
schnorr_pok/src/: error.rs  lib.rs
test/accumulator/ecc/: main.go
utils/: Cargo.toml
