[workspace]

members = [
    "utils",
    "schnorr_pok",
    "accumulator",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["EulerLagrange"]
license = "Apache-2.0"
repository = "https://github.com/Hmac512/accumulator"

[workspace.dependencies]
ark-ff = { version = "^0.4.1", default-features = false }
ark-ec = { version = "^0.4.1", default-features = false }
ark-std = { version = "^0.4.0", default-features = false}
ark-poly = { version = "^0.4.1", default-features = false }
ark-serialize = { version = "^0.4.1", default-features = false, features = [ "derive" ] }
rayon = { version = "1" }
digest = { version = "0.10", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "1.10.0", default-features = false, features = ["macros"] }
zeroize = { version = "1.6.0", features = ["derive"] }
blake2 = { version = "0.10", default-features = false }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-bn254 = { version = "^0.4.0", default-features = false, features = ["curve"] }
merlin = { version = "^3.0", default-features = false }

