[package]
name = "accumulator"
version = "0.13.0"
edition = "2021"
authors = ["EulerLagrange"]
license = "Apache-2.0"
description = "Positive and universal bilinear map accumulator and proof of membership and non-membership protocol in bn254"

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
ark-serialize = { version = "^0.4.1", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.4.1", default-features = false }
ark-ec = { version = "^0.4.1", default-features = false }
ark-std = { version = "^0.4.0", default-features = false}
ark-poly = { version = "^0.4.1", default-features = false }
digest = { version = "0.10", default-features = false, features = ["alloc"] }
rayon = { version = "1", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "1.10.0", default-features = false, features = ["macros"] }
zeroize = { version = "1.6.0", features = ["derive"] }
schnorr_pok = { version = "0.10.0", default-features = false, path = "../schnorr_pok" }
crypto_utils = { version = "0.11.0", default-features = false, path = "../utils" }

[dev-dependencies]
blake2 = { version = "0.10", default-features = false }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-bn254 = { version = "^0.4.0", default-features = false, features = ["curve"] }
serde_json = "1.0"
rmp-serde = "1.0"

[features]
default = [ "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std", "ark-serialize/std", "schnorr_pok/std", "crypto_utils/std", "serde/std"]
print-trace = [ "ark-std/print-trace", "schnorr_pok/print-trace", "crypto_utils/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-std/parallel", "rayon", "schnorr_pok/parallel", "crypto_utils/parallel" ]
